; ModuleID = '/home/carl/AnghaBench/git/extr_setup.c_is_inside_work_tree.c'
source_filename = "/home/carl/AnghaBench/git/extr_setup.c_is_inside_work_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inside_work_tree = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_inside_work_tree() #0 {
  %1 = load i64, i64* @inside_work_tree, align 8
  %2 = icmp slt i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = call i32 (...) @get_git_work_tree()
  %5 = call i64 @is_inside_dir(i32 %4)
  store i64 %5, i64* @inside_work_tree, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i64, i64* @inside_work_tree, align 8
  %8 = trunc i64 %7 to i32
  ret i32 %8
}

declare dso_local i64 @is_inside_dir(i32) #1

declare dso_local i32 @get_git_work_tree(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
